<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">File Manager HD (Explorer)</string>
     
     <string name="Explorer">(Explorer)</string>
     
   
    <string name="menu_settings">Settings</string>
    <string name="About_US">About Us</string>
    <string name="Info">Info</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
     <string name="OK">OK</string>
    <string name="Send">Send</string>
    <string name="Cancel">Cancel</string>
    
	<string name="Rate_This_App">Rate This App</string>
    
	<string name="action_save">Save</string>
	<string name="File_has_been_Saved">File has been Saved</string>
	<string name="Could_not_save_the_file">Could not save the file</string>
	<string name="There_are_no_email_clients_installed.">There are no email clients installed.</string>
    
    <string name="Paste_Data">Paste Data</string>
    <string name="paste">Paste</string>
    <string name="home">Home</string>
    <string name="up">Up</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="Search">Search</string>
    <string name="Faves">Faves</string>
    <string name="Create">Create</string>
    <string name="Sort">Sort</string>
    <string name="Refresh">Refresh</string>
    <string name="Details_Folder">Details</string>
    <string name="Open_Folder">Open </string>
    <string name="Copy_Folder">Copy </string>
    <string name="Delete_Folder">Delete </string>
    <string name="Move_Folder">Move(Cut) </string>
    <string name="Rename_Folder">Rename </string>
    <string name="Bookmark">Bookmark</string>
    <string name="Zip_Folder">Zip Folder</string>
    <string name="Paste_Folder">Paste into Folder</string>
    <string name="Name">Name:</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="Files">Files:</string>
    <string name="Folder">Folder:</string>
    <string name="Items">Items:</string>
    <string name="Modified">Modified:</string>
    <string name="Permissions">Permissions:</string>
    <string name="Search_for_a_file"> Search for a file</string>
    <string name="Sort_Completed">Sort Completed...</string>
    <string name="Created">Created</string>
    <string name="New_folder_was_not_created">New folder was not created</string>
    <string name="Create_New_Directory"> Create New Directory</string>
    <string name="items">items</string>
    <string name="Extract_here">Extract here</string>
    <string name="Compress_here">Compress here</string>
    <string name="Share">Share</string>
    <string name="Add_Bookmark">Add Bookmark</string>
    <string name="Bookmark_Added">Bookmark Added...</string>
    <string name="No_Bookmark_Added">No Bookmark Added..</string>
    <string name="bookmarklist">Bookmark List</string>
    <string name="Bookmark_name_updated">Bookmark name updated...</string>
    <string name="Bookmark_Already_done">Bookmark Already done...</string>
    <string name="Searching"> Searching...</string>
    <string name="Searching_current_file_system">  Searching current file system...</string>
    <string name="Copying">  Copying</string>
    <string name="Copying_file"> Copying file...</string>
    <string name="Unzipping">  Unzipping</string>
    <string name="Unpacking_zip_file_please_wait">  Unpacking zip file please wait...</string>
    <string name="Zipping">  Zipping</string>
    <string name="Zipping_folder">  Zipping folder...</string>
    <string name="Deleting">  Deleting</string>
    <string name="Deleting_files">  Deleting files...</string>
    <string name="Could_not_find">Could not find </string>
    <string name="Found"> Found</string>
    <string name="files"> file(s)</string>
    <string name="Copy_pasted_failed">Copy pasted failed</string>
    <string name="File_successfully_copied_and_pasted">  File successfully copied and pasted</string>
    <string name="Cannot_read_folder_due_to_permissions"> Can not read folder due to permissions</string>
    <string name="Sorry_could_not_find_a_pdf_viewer">  Sorry, could not find a pdf viewer</string>
    <string name="Sorry_could_not_find_a_Document_viewer">  Sorry, could not find a Document viewer</string>
    <string name="Sorry_could_not_find_a_HTML_viewer">  Sorry, could not find a HTML viewer</string>
    <string name="Sorry_could_not_find_anything">   Sorry, could not find anything </string>
    <string name="to_open"> to open  </string>
    <string name="Press_back_again_to_quit"> Press back again to quit.</string>
    <string name="Multi_select_is_now_off">  Multi-select is now off</string>
    <string name="Please_enter_the_name">Please enter the name</string>
    <string name="Empty">Empty</string>
    <string name="Select_option">Select Option</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Rename">Rename</string>
    <string name="New_Name">New Name</string>
    <string name="Edit_Bookmark_Name">Edit Bookmark Name</string>
    <string name="Remove_Bookmark">Remove Bookmark</string>
    <string name="Remove_Bookmark_Successfully">Remove Bookmark Successfully</string>
    <string name="Bookmark_Confimation">Remove Bookmark Confirmation</string>
    <string name="Are_you_sure_you_want_Bookmark">Are you sure you want to remove Bookmark ?</string>
    <string name="Deleted_Bookmark_Successfully">Remove Bookmark Successfully</string>
    <string name="Delete_Confimation">Delete Confirmation</string>
    <string name="Are_you_sure_you_want_delete">Are you sure you want to delete ?</string>
    <string name="Deleted_Successfully">Deleted Successfully</string>
    <string name="hidden"> hidden</string>

      <string name="menu_multi_select">Multi Select</string>
    <!--
          ***************************
             Strings for the 'Compressing' and 'Extracting' feature
          ***************************
    -->
    <string name="compressing_success">Item compressed successfully</string>
    <string name="compressing_error">Could not compress the item</string>
    <string name="compress_into_archive">Compress into archive:</string>
    <string name="extracting_success">Item extracted successfully</string>
    <string name="extracting_error">Could not extract the item</string>
    <string name="extract_into_folder">Extract into folder:</string>
    <string name="extract_title">Select folder to extract into</string>
    <string name="extract_button">Extract here</string>
    <string name="extracting">Extracting files...</string>
    <string name="compressing">Compressing files...</string>
    <string name="warning_overwrite">File %s exists. Do you want to overwrite it?</string>
    <string name="change_file_extension">Do you want to change the file extension?</string>
    <string name="deletefail">could not delete the file</string>
    
    
     <string name="MoreApps">More Apps</string>
   
    
    <string name="ContactUS">Contact Us</string>
    <string name="Contact_from">Contact from</string>
     <string name="Share_App">Share App</string>
      <string name="Share_Andoird">Android</string>
       <string name="Share_Application">Application</string>
     
    <string name="Share_App_subject">"I like"</string>
    
    <string name="Share_App_Body_top">"
Hello,
I like "</string>
    <string name="Share_App_Body_middle">" by AppAspect Technologies Pvt. Ltd. Please download from following link
    "</string>
    <string name="Share_App_Body_bottom">"
        Thanks"</string>
    
   <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>


    <string name="vitamio_name">Vitamio</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="logging">Logging</string>

    <string name="logging_normal">Normal</string>

    <string name="logging_verbose">Verbose</string>

    <string name="retry">Retry</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="enable_background_audio">Play in background</string>

    <string name="off">[off]</string>
</resources>