<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundblackcolor"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llmain"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/mainname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgmain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="05dip" />

            <TextView
                android:id="@+id/txtmain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/backgroundwhitecolor"
                android:textSize="@dimen/textnormalsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llmainline"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/backgroundwhitecolor"
            android:orientation="horizontal" >
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/lldetails"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgdetails"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/details" />

                    <TextView
                        android:id="@+id/txtdetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Details_Folder"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lldtlline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llcopy"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgcopy"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/copy" />

                    <TextView
                        android:id="@+id/txtcopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Copy_Folder"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llcpyline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lldelete"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgdelete"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/delete" />

                    <TextView
                        android:id="@+id/txtdelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Delete_Folder"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lldelline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llmove"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgmove"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/move" />

                    <TextView
                        android:id="@+id/txtmove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Move_Folder"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llmoveline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llrename"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/llrename"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/rename" />

                    <TextView
                        android:id="@+id/txtrename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Rename_Folder"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>
                
                
                  <LinearLayout
                    android:id="@+id/llrenameline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llshare"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgshare"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/share_app"/>

                    <TextView
                        android:id="@+id/txtshare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Share"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llshareline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llbookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgbookmark"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/bookmark" />

                    <TextView
                        android:id="@+id/txtbookmark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Bookmark"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llbookmarkline"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/backgraycolor"
                    android:orientation="horizontal" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llextract"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/operations_color_change"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imgextract"
                        android:layout_width="36dip"
                        android:layout_height="36dip"
                        android:layout_marginLeft="05dip"
                        android:background="@drawable/extract" />

                    <TextView
                        android:id="@+id/txtextract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dip"
                        android:text="@string/Extract_here"
                        android:textColor="@color/backgroundwhitecolor"
                        android:textSize="@dimen/textlargesize" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>